--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "d3": "~3.4.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
